fix: adjust padding in navigation layout for better alignment and consistency

--- a/projects/pioneer-charts-docs/src/app/layout/page-docs/navigation/navigation.scss
+++ b/projects/pioneer-charts-docs/src/app/layout/page-docs/navigation/navigation.scss
@@ -1,4 +1,5 @@
 :host {
     min-width: 240px;
     background-color: #fff;
+    border: 1px solid #e0e0e0;
 }
